--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <div>
-
+<img src="/beer.png" alt="Cheers">
+<a href="/beers">Check the Beers!</a>
+<a href="/random-beers">Check a Random Beer</a>
 </div>
