some styling added + start with Bonus Iteration

--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,8 +1,8 @@
 <h1>List of Beers</h1>
 
 {{#each beersFromApi}}
-<ul>
-    <img src="{{this.image_url}}" alt="">
-    <li>{{this.name}} {{this.description}} {{this.tagline}}</li>
-</ul>
+  <img src="{{this.image_url}}" id="beer-image" alt="">
+  <h4>{{ this.name }}</h4>
+  <p>{{ this.tagline }}</p>
+  <p>{{ this.description }}</p>
 {{/each}}
