--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
-<div>
-<img src="/beer.png" alt="Cheers">
-<a href="/beers">Check the Beers!</a>
-<a href="/random-beers">Check a Random Beer</a>
+<div class="">
+<img src="/beer.png" id="intro-image" alt="Cheers">
+</div>
+<div> 
+<a href="/beers" class="btn btn-primary btn-lg" style="background-color: #2081c3">Check the Beers!</a>
+<a href="/random-beers" class="btn btn-primary btn-lg" style="background-color: #2081c3">Check a Random Beer</a>
 </div>
