--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,14 @@
-<nav>
-    <a href="/">Home</a>
-    <a href="/beers">Beers</a>
-    <a href="/random-beers">Random Beer</a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2081c3">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" id="nav-headline" href="/">Home</a>
+        <a class="nav-link" id="nav-headline" href="/beers">Beers</a>
+        <a class="nav-link" id="nav-headline" href="/random-beers">Random Beer</a>
+      </div>
+    </div>
+  </div>
 </nav>
