--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,15 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+#nav-headline {
+  color: #f7f9f9;
+}
+
+#intro-image {
+  height: 400px;
+}
+
+#beer-image {
+  height: 200px;
+}
