--- a/views/random-beers.hbs
+++ b/views/random-beers.hbs
@@ -1,9 +1,8 @@
 <h1>Random Beer</h1>
-<img src="{{image_url}}" alt="">
-<ul>
-    <li>{{ name }}</li>
-    <li>{{ description }}</li>
-    <li>{{ tagline }}</li>
-    <li>{{ food_pairing }}</li>
-    <li>{{ brewers_tips }}</li>
-</ul>
+<img src="{{image_url}}" id="beer-image" alt="">
+<h4>{{ name }}</h4>
+<p>{{ tagline }}</p>
+<p>{{ description }}</p>
+<h5>Food Pairing</h5>
+<p>{{food_pairing}}</p>
+<p>Brewers Tips: {{ brewers_tips }} </p>
